# LogAi

./: .gitignore  README.md  pyproject.toml
export/: analysis.md
src/: log_generator.py  main.py
